feat: Refactor ProductsSection to display technical specifications and social links
- Updated ProductsSection component to showcase technical specs instead of products.
- Removed product filtering and category selection logic.
- Added social media links with icons for community engagement.
- Enhanced UI with improved layout and animations for technical specs display.

feat: Implement SortGame component for interactive sorting game

- Created SortGame component allowing users to drag and drop cards into correct slots.
- Integrated timer and scoring system with combo mechanics.
- Added visual feedback for correct and incorrect answers.

feat: Develop SpeedGame component for quick-answer game

- Introduced SpeedGame component with timed questions and multiple-choice answers.
- Implemented lives and scoring system with feedback for user interactions.
- Enhanced user experience with dynamic feedback and animations.

feat: Add game data utility for game components

- Created gameData utility file containing step definitions and shuffle function.
- Defined Step and DragCard interfaces for type safety.
- Provided a standardized way to manage game steps and their properties.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dixqw22t3/image/upload/v1758468801/images_cix40y.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./public/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LIVERA</title>
   </head>
